fixing the slow loading

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <meta name="keywords" content="media production house, automotive films, concert videography, corporate films Kochi, film production UAE, luxury video production" />
     <link rel="canonical" href="https://www.thinkfilms.in/" />
    
-
+  
+<meta name="thumbnail" content="https://www.thinkfilms.in/colored-logo.png" />
+<meta name="msapplication-TileImage" content="/colored-logo.png">
     <link rel="icon" type="image/png" href="/colored-logo.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/colored-logo.png" sizes="16x16" />
     <link rel="apple-touch-icon" sizes="180x180" href="/colored-logo.png" />
